--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "main": "index.js",
     "scripts": {
         "start": "tsc && node dist/index.js",
+        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
         "lint": "eslint .",
         "format": "exec prettier . --write",
         "format-spec": "prettier --write",
@@ -21,10 +22,18 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
+        "@types/node": "^22.5.4",
         "eslint": "^9.9.1",
         "globals": "^15.9.0",
         "prettier": "3.3.3",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.5.4",
         "typescript-eslint": "^8.3.0"
+    },
+    "dependencies": {
+        "@nostr-dev-kit/ndk": "^2.10.0",
+        "dotenv": "^16.4.5",
+        "nostr-tools": "^2.7.2",
+        "ws": "^8.18.0"
     }
 }
