--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
         "eslint": "^9.9.1",
         "globals": "^15.9.0",
         "prettier": "3.3.3",
+        "prisma": "^5.19.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.5.4",
         "typescript-eslint": "^8.3.0"
     },
     "dependencies": {
         "@nostr-dev-kit/ndk": "^2.10.0",
+        "@prisma/client": "5.19.1",
         "dotenv": "^16.4.5",
         "nostr-tools": "2.7.2",
         "ws": "^8.18.0"
